--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
             </nav>
         </div>
         <div class="hero flex middle-xs" style="background-image: linear-gradient(rgba(0, 0, 0, 0.9), rgba(0, 0, 0, 0.7)), url('img/hero-image.jpg');
-    }">
+    ">
     <div class="hero-text ">
         <h1>Exclusives Club</h1>
         <h4>Exclusives Club is a community for business tycoons who are eager to collaborate, buy and sell companies, receive exclusive invitations in Dubai, and access complimentary services, among many other benefits.</h4>
@@ -124,6 +124,103 @@
                     </div>
                 </div>
             </section>
+
+            <section class="partners" id="partners">
+                <div class="container">
+                  <div class="row">
+                    <div class="col-md center-xs">
+                      <h2 class="section-title">Our Partners</h2>
+                    </div>
+                  </div>
+                  <div class="row margin-bottom-small center-xs">
+                    <div class="col-md-3">
+                      <img src="img/lunalogo.png" class="partner-logo">
+                      <h3>LunaHost</h3>
+                      <p>LunaHost is a free, and very high quality hosting business, You can host your projects for FREE, and get resources depending on your projects.</p>
+                      <p><strong>Discord:</strong> <a href="https://discord.gg/BvMaRf2MmP" target="_blank">Discord Server</a></p>
+
+                    </div>
+                    <div class="col-md-3">
+                      <img src="img/partner2-logo.png" class="partner-logo">
+                      <h3>Your Business</h3>
+                      <p>Do you want to become our new Partner ? Contact us at contact@exclusivesclub.tech.</p>
+                    </div>
+                    <div class="col-md-3">
+                        <img src="img/partner2-logo.png" class="partner-logo">
+                        <h3>Your Business</h3>
+                        <p>Do you want to become our new Partner ? Contact us at contact@exclusivesclub.tech.</p>
+                      </div>
+                      <div class="col-md-3">
+                        <img src="img/partner2-logo.png" class="partner-logo">
+                        <h3>Your Business</h3>
+                        <p>Do you want to become our new Partner ? Contact us at contact@exclusivesclub.tech.</p>
+                      </div>
+                  </div>
+                </div>
+              </section>
+
+              <section class="contact" id="contact">
+                <div class="container">
+                  <div class="row">
+                    <div class="col-md center-xs">
+                      <h2 class="section-title">Get in Touch</h2>
+                    </div>
+                  </div>
+                  <div class="row margin-bottom-small center-xs">
+                    <div class="col-md-6">
+                      <img src="img/eclogowb.jpeg" class="logo" style="width: 150px; margin: 20px auto; border-radius: 10px; box-shadow: 0 0 10px rgba(0,0,0,0.1);">
+                    </div>
+                    <div class="col-md-6">
+                      <div style="text-align: center;">
+                        <p style="margin-bottom: 10px;"><strong>Discord:</strong> <a href="https://discord.gg/exclusives-club-1074020885301837864" target="_blank" style="color: #000; text-decoration: underline; font-weight: bold;">Join our Discord</a></p>
+                        <p><strong>Email:</strong> <a href="mailto:support@exclusivesclub.com" style="color: #000; text-decoration: underline; font-weight: bold;">support@exclusivesclub.com</a></p>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+              </section>
+
+              <section class="careers" id="careers">
+                <div class="container">
+                  <div class="row">
+                    <div class="col-md center-xs">
+                      <h2 class="section-title">Careers</h2>
+                    </div>
+                  </div>
+                  <div class="row margin-bottom-small center-xs">
+                    <div class="col-md-12">
+                      <p>Join our team of innovators and entrepreneurs at Exclusives Club. We're always looking for talented individuals to help us shape the future of business and entrepreneurship.</p>
+                    </div>
+                  </div>
+                  <div class="row">
+                    <div class="col-md-3">
+                      <img src="img/eclogowb.jpeg" class="partner-logo">
+                      <h3>Soon</h3>
+                      <p>Soon Available.</p>
+                      <p><strong></strong> <a href="mailto:careers@exclusivesclub.com" style="color: #000; text-decoration: underline; font-weight: bold;">Apply</a></p>
+                    </div>
+                    <div class="col-md-3">
+                      <img src="img/eclogowb.jpeg" class="partner-logo">
+                      <h3>Soon</h3>
+                      <p>Soon Available.</p>
+                      <p><strong></strong> <a href="mailto:careers@exclusivesclub.com" style="color: #000; text-decoration: underline; font-weight: bold;">Apply</a></p>
+                    </div>
+                    <div class="col-md-3">
+                      <img src="img/eclogowb.jpeg" class="partner-logo">
+                      <h3>Soon</h3>
+                      <p>Soon Available.</p>
+                      <p><strong></strong> <a href="mailto:careers@exclusivesclub.com" style="color: #000; text-decoration: underline; font-weight: bold;">Apply</a></p>
+                    </div>
+                    <div class="col-md-3">
+                      <img src="img/eclogowb.jpeg" class="partner-logo">
+                      <h3>Soon</h3>
+                      <p>Soon Available.</p>
+                      <p><strong></strong> <a href="mailto:careers@exclusivesclub.com" style="color: #000; text-decoration: underline; font-weight: bold;">Apply</a></p>
+                    </div>
+                  </div>
+                </div>
+              </section>
+
         </main>
     </div>
     <footer>
