--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="de-DE" prefix="og: http://ogp.me/ns#">
     <meta charset="UTF-8">
     <title>Exclusives Club</title>
-    <link rel="icon" type="image/png" sizes="32x32" href="img/favicon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="img/favicon1.png">
     <link rel="stylesheet" type="text/css" href="css/normalize.min.css" media="all" />
     <link href="https://fonts.googleapis.com/css?family=Raleway&display=swap" rel="stylesheet">
     <link rel="stylesheet" type="text/css" href="css/flexboxgrid.css" media="all" />
