--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="de-DE" prefix="og: http://ogp.me/ns#">
     <meta charset="UTF-8">
     <title>Exclusives Club</title>
-    <link rel="icon" type="image/png" sizes="32x32" href="img/favicon1.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="img/favicon.png">
     <link rel="stylesheet" type="text/css" href="css/normalize.min.css" media="all" />
     <link href="https://fonts.googleapis.com/css?family=Raleway&display=swap" rel="stylesheet">
     <link rel="stylesheet" type="text/css" href="css/flexboxgrid.css" media="all" />
@@ -15,9 +15,11 @@
             <img src="img/eclogo.png" class="logo">
             <nav class="end-xs">
                 <ul>
-                    <li><a href="#about-us">About us</a></li>
-                    <li><a href="#services">Services</a></li>
-                    <li><a href="#benefits">Benefits</a></li>
+                    <li><a href="/index.html">Home</a></li>
+                    <li><a href="/contact.html">Contact</a></li>
+                    <li><a href="/memberships.html">Membership</a></li>
+
+
                 </ul>
             </nav>
         </div>
@@ -133,52 +135,25 @@
                     </div>
                   </div>
                   <div class="row margin-bottom-small center-xs">
-                    <div class="col-md-3">
+                    <div class="col-md-3 partner-card">
                       <img src="img/lunalogo.png" class="partner-logo">
                       <h3>LunaHost</h3>
-                      <p>LunaHost is a free, and very high quality hosting business, You can host your projects for FREE, and get resources depending on your projects.</p>
+                      <p>LunaHost is a free, and very high quality hosting business. You can host your projects for FREE, and get resources depending on your projects.</p>
                       <p><strong>Discord:</strong> <a href="https://discord.gg/BvMaRf2MmP" target="_blank">Discord Server</a></p>
-
                     </div>
-                    <div class="col-md-3">
+                    <div class="col-md-3 partner-card">
                       <img src="img/partner2-logo.png" class="partner-logo">
                       <h3>Your Business</h3>
-                      <p>Do you want to become our new Partner ? Contact us at contact@exclusivesclub.tech.</p>
+                      <p>Do you want to become our new Partner? Contact us at contact@exclusivesclub.tech.</p>
                     </div>
-                    <div class="col-md-3">
-                        <img src="img/partner2-logo.png" class="partner-logo">
-                        <h3>Your Business</h3>
-                        <p>Do you want to become our new Partner ? Contact us at contact@exclusivesclub.tech.</p>
-                      </div>
-                      <div class="col-md-3">
-                        <img src="img/partner2-logo.png" class="partner-logo">
-                        <h3>Your Business</h3>
-                        <p>Do you want to become our new Partner ? Contact us at contact@exclusivesclub.tech.</p>
-                      </div>
-                  </div>
-                </div>
+                    <div class="col-md-3 partner-card">
+                      <img src="img/partner2-logo.png" class="partner-logo">
+                      <h3>Your Business</h3>
+                      <p>Do you want to become our new Partner? Contact us at contact@exclusivesclub.tech.</p>
+                    </div>
               </section>
+              
 
-              <section class="contact" id="contact">
-                <div class="container">
-                  <div class="row">
-                    <div class="col-md center-xs">
-                      <h2 class="section-title">Get in Touch</h2>
-                    </div>
-                  </div>
-                  <div class="row margin-bottom-small center-xs">
-                    <div class="col-md-6">
-                      <img src="img/eclogowb.jpeg" class="logo" style="width: 150px; margin: 20px auto; border-radius: 10px; box-shadow: 0 0 10px rgba(0,0,0,0.1);">
-                    </div>
-                    <div class="col-md-6">
-                      <div style="text-align: center;">
-                        <p style="margin-bottom: 10px;"><strong>Discord:</strong> <a href="https://discord.gg/exclusives-club-1074020885301837864" target="_blank" style="color: #000; text-decoration: underline; font-weight: bold;">Join our Discord</a></p>
-                        <p><strong>Email:</strong> <a href="mailto:support@exclusivesclub.com" style="color: #000; text-decoration: underline; font-weight: bold;">support@exclusivesclub.com</a></p>
-                      </div>
-                    </div>
-                  </div>
-                </div>
-              </section>
 
               <section class="careers" id="careers">
                 <div class="container">
@@ -193,33 +168,26 @@
                     </div>
                   </div>
                   <div class="row">
-                    <div class="col-md-3">
-                      <img src="img/eclogowb.jpeg" class="partner-logo">
+                    <div class="col-md-3 career-card">
+                      <img src="img/eclogowb.jpeg" class="career-logo">
                       <h3>Soon</h3>
                       <p>Soon Available.</p>
-                      <p><strong></strong> <a href="mailto:careers@exclusivesclub.com" style="color: #000; text-decoration: underline; font-weight: bold;">Apply</a></p>
+                      <p><a href="mailto:careers@exclusivesclub.com">Apply</a></p>
                     </div>
-                    <div class="col-md-3">
-                      <img src="img/eclogowb.jpeg" class="partner-logo">
+                    <div class="col-md-3 career-card">
+                      <img src="img/eclogowb.jpeg" class="career-logo">
                       <h3>Soon</h3>
                       <p>Soon Available.</p>
-                      <p><strong></strong> <a href="mailto:careers@exclusivesclub.com" style="color: #000; text-decoration: underline; font-weight: bold;">Apply</a></p>
+                      <p><a href="mailto:careers@exclusivesclub.com">Apply</a></p>
                     </div>
-                    <div class="col-md-3">
-                      <img src="img/eclogowb.jpeg" class="partner-logo">
+                    <div class="col-md-3 career-card">
+                      <img src="img/eclogowb.jpeg" class="career-logo">
                       <h3>Soon</h3>
                       <p>Soon Available.</p>
-                      <p><strong></strong> <a href="mailto:careers@exclusivesclub.com" style="color: #000; text-decoration: underline; font-weight: bold;">Apply</a></p>
+                      <p><a href="mailto:careers@exclusivesclub.com">Apply</a></p>
                     </div>
-                    <div class="col-md-3">
-                      <img src="img/eclogowb.jpeg" class="partner-logo">
-                      <h3>Soon</h3>
-                      <p>Soon Available.</p>
-                      <p><strong></strong> <a href="mailto:careers@exclusivesclub.com" style="color: #000; text-decoration: underline; font-weight: bold;">Apply</a></p>
-                    </div>
-                  </div>
-                </div>
               </section>
+              
 
         </main>
     </div>
