--- a/client-area.html
+++ b/client-area.html
@@ -76,9 +76,11 @@
             <img src="img/eclogo.png" class="logo" alt="Exclusives Club Logo">
             <nav class="end-xs">
                 <ul>
-                    <li><a href="#about-us">About us</a></li>
-                    <li><a href="#services">Services</a></li>
-                    <li><a href="#benefits">Benefits</a></li>
+                    <li><a href="/index.html">Home</a></li>
+                    <li><a href="index.html#about-us">About us</a></li>
+                    <li><a href="index.html#services">Services</a></li>
+                    <li><a href="/memberships.html">Membership</a></li>
+                    <li><a href="contact.html">Contact</a></li>
                 </ul>
             </nav>
         </div>
