--- a/contact.html
+++ b/contact.html
@@ -19,10 +19,9 @@
             <nav class="end-xs">
                 <ul>
                     <li><a href="/index.html">Home</a></li>
-                    <li><a href="index.html#about-us">About us</a></li>
-                    <li><a href="index.html#services">Services</a></li>
+                    <li><a href="/contact.html">Contact</a></li>
                     <li><a href="/memberships.html">Membership</a></li>
-                    <li><a href="contact.html">Contact</a></li>
+                    <li><a href="/child-orgs.html">Child Organizations</a></li>
                 </ul>
             </nav>
         </div>
