--- a/memberships.html
+++ b/memberships.html
@@ -68,7 +68,7 @@
 
     <div class="row secondary-footer">
         <div class="col-md">
-         <p>Made with love ♥ by the team © 2024.</p>                
+         <p>2024 Exclusives Club. All rights reserved.</p>                
      </div>
      <div class="col-md end-md">
          <p><a href="#">Imprint</a> | <a href="#">Data Protection</a></p>                
