Changed Child Organisation Text.

--- a/child-orgs.html
+++ b/child-orgs.html
@@ -26,7 +26,7 @@
         <div class="hero flex middle-xs" style="background-image: linear-gradient(rgba(0, 0, 0, 0.9), rgba(0, 0, 0, 0.7)), url('img/hero-image.jpg');">
             <div class="hero-text">
                 <h1>Child Organizations</h1>
-                <h4>Explore our affiliated child organizations that are paving the way for young entrepreneurs.</h4>
+                <h4>Explore our child organizations that are paving the way for young entrepreneurs.</h4>
             </div>
         </div>
     </header>
