--- a/child-orgs.html
+++ b/child-orgs.html
@@ -44,7 +44,7 @@
                             <div class="child-org-card">
                                 <img src="img/org1-logo.png" class="child-org-logo">
                                 <h3>RustyFM</h3>
-                                <p>RustyFM is a dedicated team of developers, ready to code your next big project, All under a affordable price..</p>
+                                <p>RustyFM is a dedicated team of developers, ready to code your next big project, All under a affordable price.</p>
                                 <a href="https://rustyf.sbs" class="learn-more">Learn More</a>
                             </div>
                         </div>
