--- a/child-orgs.html
+++ b/child-orgs.html
@@ -2,7 +2,7 @@
 <html lang="de-DE" prefix="og: http://ogp.me/ns#">
 <head>
     <meta charset="UTF-8">
-    <title>Exclusives Club - Child Organizations</title>
+    <title>Exclusives Empire - Child Organizations</title>
     <link rel="icon" type="image/png" sizes="32x32" href="img/favicon.png">
     <link rel="stylesheet" type="text/css" href="css/normalize.min.css" media="all" />
     <link href="https://fonts.googleapis.com/css?family=Raleway&display=swap" rel="stylesheet">
@@ -75,7 +75,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-md-6">
-                    <p>&copy; 2024 Exclusives Club. All rights reserved.</p>
+                    <p>&copy; 2024 Exclusives Empire. All rights reserved.</p>
                 </div>
                 <div class="col-md-6 end-xs">
 
