--- a/contact.html
+++ b/contact.html
@@ -2,7 +2,7 @@
 <html lang="de-DE" prefix="og: http://ogp.me/ns#">
 <head>
     <meta charset="UTF-8">
-    <title>Contact - Exclusives Club</title>
+    <title>Contact - Exclusives Empire</title>
     <link rel="icon" type="image/png" sizes="32x32" href="img/favicon.png">
     <link rel="stylesheet" type="text/css" href="css/normalize.min.css" media="all" />
     <link href="https://fonts.googleapis.com/css?family=Raleway&display=swap" rel="stylesheet">
@@ -40,7 +40,7 @@
                         <div class="col-md-6">
                             <div style="text-align: center;">
                                 <p style="margin-bottom: 10px;"><strong>Discord:</strong> <a href="https://discord.gg/exclusives-club-1074020885301837864" target="_blank" style="color: #000; text-decoration: underline; font-weight: bold;">Join our Discord</a></p>
-                                <p><strong>Email:</strong> <a href="mailto:support@exclusivesclub.com" style="color: #000; text-decoration: underline; font-weight: bold;">support@exclusivesclub.com</a></p>
+                                <p><strong>Email:</strong> <a href="mailto:support@exclusivesempire.com" style="color: #000; text-decoration: underline; font-weight: bold;">support@exclusivesempire.com</a></p>
                             </div>
                         </div>
                     </div>
@@ -57,7 +57,7 @@
             <div class="row margin-bottom-small">
                 <div class="col-md-8">
                     <h3>About us</h3>
-                    <p>Exclusives Club is a community for business tycoons who are eager to collaborate, buy and sell companies, receive exclusive invitations in Dubai, and access complimentary services, among many other benefits. If you're under 18 and interested in starting your own physical stores, EC is the perfect choice! Join EC to take advantage of affordable items and much more.
+                    <p>Exclusives Empire is a community for business tycoons who are eager to collaborate, buy and sell companies, receive exclusive invitations in Dubai, and access complimentary services, among many other benefits. If you're under 18 and interested in starting your own physical stores, EC is the perfect choice! Join EC to take advantage of affordable items and much more.
                         .</p>
                 </div>
 
@@ -67,7 +67,7 @@
 
     <div class="row secondary-footer">
         <div class="col-md">
-         <p>2024 Exclusives Club. All rights reserved.</p>                
+         <p>2024 Exclusives Empire. All rights reserved.</p>                
      </div>
      <div class="col-md end-md">
          <p><a href="#">Imprint</a> | <a href="#">Data Protection</a></p>                
