--- a/memberships.html
+++ b/memberships.html
@@ -2,7 +2,7 @@
 <html lang="de-DE" prefix="og: http://ogp.me/ns#">
 <head>
     <meta charset="UTF-8">
-    <title>Memberships - Exclusives Club</title>
+    <title>Memberships - Exclusives Empire</title>
     <link rel="icon" type="image/png" sizes="32x32" href="img/favicon.png">
     <link rel="stylesheet" type="text/css" href="css/normalize.min.css" media="all" />
     <link href="https://fonts.googleapis.com/css?family=Raleway&display=swap" rel="stylesheet">
@@ -36,7 +36,7 @@
                     <div class="row margin-bottom-small center-xs">
                         <div class="col-md-6">
                             <h3>Membership Benefits</h3>
-                            <p>People who have Exclusives Club membership also gets premium access to other projects, What are you waiting for ?</p>
+                            <p>People who have Exclusives Empire membership also gets premium access to other projects, What are you waiting for ?</p>
                             <a href="client-area.html"><button class="light">Join Now!</button></a>
                         </div>
                         <div class="col-md-6">
@@ -56,7 +56,7 @@
             <div class="row margin-bottom-small">
                 <div class="col-md-8">
                     <h3>About us</h3>
-                    <p>Exclusives Club is a community for business tycoons who are eager to collaborate, buy and sell companies, receive exclusive invitations in Dubai, and access complimentary services, among many other benefits. If you're under 18 and interested in starting your own physical stores, EC is the perfect choice! Join EC to take advantage of affordable items and much more.
+                    <p>Exclusives Empire is a community for business tycoons who are eager to collaborate, buy and sell companies, receive exclusive invitations in Dubai, and access complimentary services, among many other benefits. If you're under 18 and interested in starting your own physical stores, EC is the perfect choice! Join EC to take advantage of affordable items and much more.
                         .</p>
                 </div>
 
@@ -66,7 +66,7 @@
 
     <div class="row secondary-footer">
         <div class="col-md">
-         <p>2024 Exclusives Club. All rights reserved.</p>                
+         <p>2024 Exclusives Empire. All rights reserved.</p>                
      </div>
      <div class="col-md end-md">
          <p><a href="#">Imprint</a> | <a href="#">Data Protection</a></p>                
