Added News Page

--- a/index.html
+++ b/index.html
@@ -19,6 +19,8 @@
                     <li><a href="/contact.html">Contact</a></li>
                     <li><a href="/memberships.html">Membership</a></li>
                     <li><a href="/child-orgs.html">Child Organizations</a></li>
+                    <li><a href="/news.html">News</a></li>
+
 
 
                 </ul>
@@ -130,6 +132,9 @@
                     </div>
                 </div>
             </section>
+
+
+            
 
             <section class="partners" id="partners">
                 <div class="container">
