--- a/memberships.html
+++ b/memberships.html
@@ -20,6 +20,8 @@
                     <li><a href="/contact.html">Contact</a></li>
                     <li><a href="/memberships.html">Membership</a></li>
                     <li><a href="/child-orgs.html">Child Organizations</a></li>
+                    <li><a href="/news.html">News</a></li>
+
                 </ul>
             </nav>
         </div>
