News Page Seperate, Not A Section Anymore.

--- a/news.html
+++ b/news.html
@@ -44,20 +44,20 @@
                     <div class="row news-frames">
                         <div class="col-md-4 news-frame">
                             <div class="news-frame-content">
-                                <h3>News Title 1</h3>
-                                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam non urna vitae lorem suscipit aliquet. <a href="#">Read more</a></p>
+                                <h3>Rebrand</h3>
+                                <p>EC, Exclusives Club is rebranded to Exclusives Empire.</p>
                             </div>
                         </div>
                         <div class="col-md-4 news-frame">
                             <div class="news-frame-content">
-                                <h3>News Title 2</h3>
-                                <p>Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium. <a href="#">Read more</a></p>
+                                <h3>Soon</h3>
+                                <p>Soon. </p>
                             </div>
                         </div>
                         <div class="col-md-4 news-frame">
                             <div class="news-frame-content">
-                                <h3>News Title 3</h3>
-                                <p>Ut enim ad minima veniam, quis nostrum exercitationem ullam corporis suscipit laboriosam. <a href="#">Read more</a></p>
+                                <h3>Soon</h3>
+                                <p>Soon.</p>
                             </div>
                         </div>
                     </div>
