--- a/child-orgs.html
+++ b/child-orgs.html
@@ -18,8 +18,9 @@
                 <ul>
                     <li><a href="/index.html">Home</a></li>
                     <li><a href="/contact.html">Contact</a></li>
-                    <li><a href="/memberships.html">Membership</a></li>
                     <li><a href="/child-orgs.html">Child Organizations</a></li>
+                    <li><a href="/news.html">News</a></li>
+
                 </ul>
             </nav>
         </div>
