--- a/client-area.html
+++ b/client-area.html
@@ -81,6 +81,8 @@
                     <li><a href="index.html#services">Services</a></li>
                     <li><a href="/memberships.html">Membership</a></li>
                     <li><a href="contact.html">Contact</a></li>
+                    <li><a href="/news.html">News</a></li>
+
                 </ul>
             </nav>
         </div>
