Updates On Child-Orgs

--- a/child-orgs.html
+++ b/child-orgs.html
@@ -44,9 +44,9 @@
                         <div class="col-md-4">
                             <div class="child-org-card">
                                 <img src="img/org1-logo.png" class="child-org-logo">
-                                <h3>RustyFM</h3>
-                                <p>RustyFM is a dedicated team of developers, ready to code your next big project, All under a affordable price.</p>
-                                <a href="https://rustyf.sbs" class="learn-more">Learn More</a>
+                                <h3>Exclusive Host</h3>
+                                <p>Exclusive Host, Is a very cheap and trusted host, We are here for all your needs and projects.</p>
+                                <a href="https://discord.gg/BvMaRf2MmP" class="learn-more">Learn More</a>
                             </div>
                         </div>
                         <div class="col-md-4">
