Updates On News, Added Exclusives Host.

--- a/news.html
+++ b/news.html
@@ -49,8 +49,8 @@
                         </div>
                         <div class="col-md-4 news-frame">
                             <div class="news-frame-content">
-                                <h3>Soon</h3>
-                                <p>Soon. </p>
+                                <h3>Exclusive Hosting</h3>
+                                <p>We are excited to announce the opening of Exclusive Hosting ! Do you need free hosting ? Now you can, We offer resources for all your projects, Join the membership for more upgrades ! </p>
                             </div>
                         </div>
                         <div class="col-md-4 news-frame">
