--- a/index.html
+++ b/index.html
@@ -145,9 +145,8 @@
                   <div class="row margin-bottom-small center-xs">
                     <div class="col-md-3 partner-card">
                       <img src="img/lunalogo.png" class="partner-logo">
-                      <h3>LunaHost</h3>
-                      <p>LunaHost is a free, and very high quality hosting business. You can host your projects for FREE, and get resources depending on your projects.</p>
-                      <p><strong>Discord:</strong> <a href="https://discord.gg/BvMaRf2MmP" target="_blank">Discord Server</a></p>
+                      <h3>Your Business</h3>
+                      <p>Do you want to become our new Partner? Contact us at contact@exclusivesclub.tech.</p>
                     </div>
                     <div class="col-md-3 partner-card">
                       <img src="img/partner2-logo.png" class="partner-logo">
