Header Update, Added Membership.

--- a/client-area.html
+++ b/client-area.html
@@ -100,7 +100,7 @@
                     <li><a href="/index.html">Home</a></li>
                     <li><a href="index.html#about-us">About us</a></li>
                     <li><a href="index.html#services">Services</a></li>
-                    <li><a href="/memberships.html">Membership</a></li>
+                    <li><a href="/client-area.html">Membership</a></li>
                     <li><a href="contact.html">Contact</a></li>
                     <li><a href="/news.html">News</a></li>
 
