--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
             <nav class="end-xs">
                 <ul>
                     <li><a href="/index.html">Home</a></li>
-                    <li><a href="/contact.html">Contact</a></li>
+                    <li><a href="/client-area.html">Membership</a></li>
                     <li><a href="/child-orgs.html">Child Organizations</a></li>
                     <li><a href="/news.html">News</a></li>
 
@@ -157,7 +157,7 @@
                     </div>
               </section>
               
-              
+
             <section class="careers" id="careers">
                 <div class="container">
                     <div class="row">
