--- a/news.html
+++ b/news.html
@@ -17,7 +17,7 @@
             <nav class="end-xs">
                 <ul>
                     <li><a href="/index.html">Home</a></li>
-                    <li><a href="/contact.html">Contact</a></li>
+                    <li><a href="/client-area.html">Membership</a></li>
                     <li><a href="/child-orgs.html">Child Organizations</a></li>
                     <li><a href="/news.html">News</a></li>
 
